--- a/common/build.gradle
+++ b/common/build.gradle
@@ -33,9 +33,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'org.altbeacon:android-beacon-library:2.15'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.core:core:1.1.0-alpha01'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.7'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.7'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.7'
+    implementation 'org.altbeacon:android-beacon-library:2.15.2'
 }
