--- a/gradle.properties
+++ b/gradle.properties
@@ -37,3 +37,5 @@
 # Only relevant projects are configured which results in faster builds for large multi-projects.
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:configuration_on_demand
 # org.gradle.configureondemand=true
+android.enableJetifier=true
+android.useAndroidX=true
