--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".services.MobilePersistentServiceDisableDialogActivity"></activity>
+        <activity android:name=".service.MobilePersistentServiceDisableDialogActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -123,9 +123,9 @@
                 android:value=".activity.MainActivity" />
         </activity>
 
-        <service android:name=".services.MobilePersistentService" />
+        <service android:name=".service.MobilePersistentService" />
 
-        <receiver android:name=".services.MobilePersistentServiceBroadcastReceiver">
+        <receiver android:name=".service.MobilePersistentServiceBroadcastReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="pt.unl.fct.di.novalincs.yanux.scavenger.NOTIFICATION_CHANNEL.ACTION_DISABLE_SERVICE" />
