--- a/common/build.gradle
+++ b/common/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '29.0.0'
+    buildToolsVersion '29.0.2'
     compileOptions {
         targetCompatibility = "8"
         sourceCompatibility = "8"
@@ -43,15 +43,15 @@ dependencies {
     api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.9.9'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
     api 'com.madgag.spongycastle:bcpkix-jdk15on:1.58.0.0'
-    api 'com.squareup.okhttp3:okhttp:4.0.0-RC2'
+    api 'com.squareup.okhttp3:okhttp:4.1.0'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
-    api 'io.jsonwebtoken:jjwt-api:0.10.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.6'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.6'
+    api 'io.jsonwebtoken:jjwt-api:0.10.7'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
     api 'org.altbeacon:android-beacon-library:2.16.2'
     testImplementation 'junit:junit:4.12'
 }
