--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.0.2'
     api 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    api 'org.apache.commons:commons-lang3:3.9'
     api 'com.fasterxml.jackson.core:jackson-core:2.9.9'
     api 'com.fasterxml.jackson.core:jackson-annotations:2.9.9'
     api 'com.fasterxml.jackson.core:jackson-databind:2.9.9.3'
