--- a/common/build.gradle
+++ b/common/build.gradle
@@ -34,6 +34,12 @@ android {
     }
 }
 
+//TODO: Test if everything works with Bouncy Castle in place of Spongy Castle
+//This is needed for the project to compile with Bouncy Castle
+/*configurations {
+    all*.exclude group: 'junit', module: 'junit'
+}*/
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.1.0'
@@ -45,6 +51,8 @@ dependencies {
     api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.10.1'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
     api 'com.madgag.spongycastle:bcpkix-jdk15on:1.58.0.0'
+    //TODO: Test if everything works with Bouncy Castle in place of Spongy Castle
+    //api 'org.bouncycastle:bcpkix-jdk15on:1.64'
     api 'com.squareup.okhttp3:okhttp:4.2.2'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api('io.socket:socket.io-client:1.0.0') {
